force-app/main/default/objects/MessagingSession/fields/Bot_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Bot_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bot Configuration</label>
    <referenceTo>Bot_Configuration__c</referenceTo>
    <relationshipLabel>Messaging Sessions</relationshipLabel>
    <relationshipName>Messaging_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>