force-app/main/default/objects/MessagingSession/fields/Flag_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Flag_Keywords__c</fullName>
    <label>Flag Keywords</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>