force-app/main/default/objects/MessagingSession/fields/PrechatAccountId__c.field-meta.xml
<CustomField>
    <fullName>PrechatAccountId__c</fullName>
    <label>PrechatAccountId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>