force-app/main/default/objects/MessagingSession/fields/PrechatContactid__c.field-meta.xml
<CustomField>
    <fullName>PrechatContactid__c</fullName>
    <label>PrechatContactid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>