force-app/main/default/objects/MessagingSession/listViews/GPTfy_Queue_MessagingSession.listView-meta.xml
<ListView>
    <fullName>GPTfy_Queue_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>GPTfy Queue</label>
    <queue>GPTfy_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>